# etl_excel_to_automated

./: pyproject.toml
app/: main.py
app/pipeline/: extract.py  load.py  transform.py
